--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>서버의 IP 주소</h1>
-<p th:text="'서버 IP: ' + ${message}"></p> <!-- 서버 IP 주소 출력 -->
+<p th:text="'서버 IP!!! : ' + ${message}"></p> <!-- 서버 IP 주소 출력 -->
 </body>
 </html>
